# bzlmod_lockfile_bug

./: .bazelrc  MODULE.bazel  README.md
.github/: renovate.json
